# target-mysql

./: .gitignore  README.md  meltano.yml  pyproject.toml  stream2.jsonl  stream3.jsonl  test_run.sh
.github/workflows/: python-app.yml
docs/: README_ko.md
target_mysql/: sinks.py  target.py
target_mysql/tests/: test_core.py
target_mysql/tests/data_files/: camelcase.singer  duplicate_records.singer  illegal_colnames.singer  integer_null_value.singer  numerics.singer  special_chars_in_attributes.singer  string_null_value.singer  update_records.singer
target_mysql/tests/samples/sample_tap_countries/: countries_tap.py
target_oracle/: sinks.py  target.py
target_oracle/tests/: test_core.py
target_oracle/tests/data_files/: camelcase.singer
target_oracle/tests/samples/sample_tap_countries/: countries_tap.py
tests/: config.json.sample  stream1.jsonl  stream2.jsonl  stream3.jsonl  test_run.bat  test_run.sh
