[tool.poetry]
name = "thk-target-mysql"
version = "0.1.2"
description = "`target-mysql` is a Singer target for MySQL, built with the Meltano Singer SDK."
authors = ["Taehwan Kwag <thkwag@gmail.com>"]
keywords = [
    "ELT",
    "MySQL",
    "Singer",
    "Meltano"
]
license = "Apache 2.0"
packages = [
    { include = "target_mysql" }
]
readme = ["README.md"]
repository = "https://github.com/thkwag/target-mysql"

[tool.poetry.dependencies]
python = "<=3.11,>=3.8.1"
requests = "^2.25.1"
singer-sdk = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
tox = "^4.6.4"
flake8 = "^6.0.0"
black = "^23.7.0"
pydocstyle = "^6.1.1"
mypy = "^1.4.1"
types-requests = "^2.26.1"
isort = "^5.12.0"
mysqlclient = "^2.2.0"
cryptography = "^41.0.2"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_mysql"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mysql = 'target_mysql.target:TargetMySQL.cli'
